# sequential-resume-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  graph.py  loaders.py  main.py  nodes.py  state.py
sample_data/: resume.txt
sample_output/: result.json
