[project]
name = "sequential-resume-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "reportlab>=5.0.0",
]
